--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "chart.js": "^2.7.1",
     "element-ui": "^2.0.11",
     "muse-ui": "^2.1.0",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
