--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "muse-ui": "^2.1.0",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.1.0",
+    "vue-count-to": "^1.0.13",
+    "vue-event-calendar": "^1.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
