--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "chart.js": "^2.7.1",
     "element-ui": "^2.0.11",
+    "jquery": "^3.3.1",
     "muse-ui": "^2.1.0",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.1.0",
