--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "chart.js": "^2.7.1",
+    "crypto": "^1.0.1",
     "element-ui": "^2.0.11",
     "jquery": "^3.3.1",
     "muse-ui": "^2.1.0",
